--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ body {
                         aria-labelledby="offcanvasDarkNavbarLabel"
                     >
                         <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Red Apple</h5>
                             <button
                                 type="button"
                                 class="btn-close btn-close-white"
@@ -177,9 +177,7 @@ body {
                         aria-label="Toggle navigation"
                         id="nav-icon1"
                     >
-                        <span></span>
-                        <span></span>
-                        <span></span>
+                        <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse flex-end justify-content-end" id="navbarNav">
                         <ul class="navbar-nav ">
